--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,15 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1" >
     <title>Andrew Brown's Cloud Engineer Résumé</title>
   </head>
   <body>
     <main>
       <header>
-        
+        <h1>Andrew Brown</h1>
+        <p>
+          710 Winnipeg St, Schreiber, ON P0T 2S0, Canada
+          &bull;
+          <a href="mailto:andrew@exampro.co">andrew@examrpo.co</a>
+          &bull;
+          +1 807-222-2323
+        </p>
       </header>
+      <article>
+        <section class="education">
+          <h2>Education</h2>
+          <div class="items">
+            <div class="item">
+              <div class="info">
+                <h3>Confederation College</h3>
+                <p>Ontario College Advanced Diploma (3 years)</p>
+              </div><!-- info -->
+              <div class="details">
+                <div class="location">Thunder Bay, ON</div>
+                <div class="duration">2007</div>
+              </div><!-- details -->
+            </div><!-- item -->
+          </div><!-- items -->
+        </section>
+        <section class="experience">
+          <h2>Experience</h2>
+          <div class="items">
+            <div class="item">
+              <div class="info">
+                <h3>ExamPro Training Inc &emdash; CEO and Co-founder</h3>
+                <p>Ontario College Advanced Diploma (3 years)</p>
+              </div><!-- info -->
+              <div class="details">
+                <div class="location">Schreiber, ON</div>
+                <div class="duration">2018-2025</div>
+              </div><!-- details -->
+              <ul>
+                <li>Built a custom multi-tenant learning management system, deployed to AWS</li>
+                <li>Created over 40 courses and 1000+ hours of educational content</li>
+              </ul>
+            </div><!-- item -->
+          </div><!-- items -->
+        </section>
+        <section class="leadership">
+          <h2>Leadership &amp; Activities</h2>
+          <div class="items">
+            <div class="item">
+              <div class="info">
+                <h3>Cloud Resume Challenge Bootcamp</h3>
+                <p>I maintain the community project Cloud Resume Challenge</p>
+              </div><!-- info -->
+              <div class="details">
+                <div class="location">Online</div>
+                <div class="duration">2025 May &emdash; Present</div>
+              </div><!-- details -->
+              <ul>
+                <li>Update eBooks</li>
+                <li>Created new video course</li>
+                <li>Created companion cloud essentials course</li>
+              </ul>
+            </div><!-- item -->
+          </div><!-- items -->
+        </section>
+        <section class="skills">
+          <h2>Skills &amp; Interests</h2>
+          <div class="items">
+            <div class="item">
+              <div class="info">
+                <h3>ExamPro Cloud Essentials</h3>
+                <p>Cloud Fundementals and multi-cloud knowledge</p>
+              </div><!-- info -->
+              <div class="details">
+                <div class="code">Japan/Toronto</div>
+                <div class="duration">Valid Till: 2025-2028</div>
+              </div><!-- details -->
+            </div><!-- item -->
+          </div><!-- items -->
+          <div class="items">
+            <div class="item">
+              <div class="info">
+                <h3>JLPT Certification</h3>
+                <p>I'm currently studying Japanese aiming to pass the JLPTN4 in 2025-2026<p>
+              </div><!-- info -->
+              <div class="details">
+                <div class="location">Japan/Toronto</div>
+                <div class="duration">2025 May &emdash; Present</div>
+              </div><!-- details -->
+            </div><!-- item -->
+          </div><!-- items -->
+        </section>
+      </article>
     </main>
   </body>
 </html>
