styling the resume

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,11 +6,13 @@
     <title>Andrew Brown's Cloud Engineer Résumé</title>
     <link rel="stylesheet" href="/assets/stylesheets/style.css">
   </head>
-  <body>
+  <body location="resume">
     <main>
       <header>
         <nav>
           <a href="/">Home</a>
+          <a class="active" href="/resume.html">Résumé </a>
+          <a href="/projects.html">Projects</a>
         </nav>
       </header>
       <div class="content_wrap">
@@ -30,14 +32,16 @@
               <h2>Education</h2>
               <div class="items">
                 <div class="item">
-                  <div class="info">
-                    <h3>Confederation College</h3>
-                    <p>Ontario College Advanced Diploma (3 years)</p>
-                  </div><!-- info -->
-                  <div class="details">
-                    <div class="location">Thunder Bay, ON</div>
-                    <div class="duration">2007</div>
-                  </div><!-- details -->
+                  <div class="item_heading">
+                    <div class="info">
+                      <h3>Confederation College</h3>
+                      <p>Ontario College Advanced Diploma (3 years)</p>
+                    </div><!-- info -->
+                    <div class="details">
+                      <div class="location">Thunder Bay, ON</div>
+                      <div class="duration">2007</div>
+                    </div><!-- details -->
+                  </div><!-- item_heading-->
                 </div><!-- item -->
               </div><!-- items -->
             </section>
@@ -45,17 +49,50 @@
               <h2>Experience</h2>
               <div class="items">
                 <div class="item">
-                  <div class="info">
-                    <h3>ExamPro Training Inc &emdash; CEO and Co-founder</h3>
-                    <p>Ontario College Advanced Diploma (3 years)</p>
-                  </div><!-- info -->
-                  <div class="details">
-                    <div class="location">Schreiber, ON</div>
-                    <div class="duration">2018-2025</div>
-                  </div><!-- details -->
+                  <div class="item_heading">
+                    <div class="info">
+                      <h3>ExamPro Training Inc &mdash; CEO and Co-founder</h3>
+                      <p>Free cloud learning study courses platform</p>
+                    </div><!-- info -->
+                    <div class="details">
+                      <div class="location">Schreiber, ON</div>
+                      <div class="duration">2018-2025</div>
+                    </div><!-- details -->
+                  </div><!-- item_heading-->
                   <ul>
                     <li>Built a custom multi-tenant learning management system, deployed to AWS</li>
                     <li>Created over 40 courses and 1000+ hours of educational content</li>
+                  </ul>
+                </div><!-- item -->
+                <div class="item">
+                  <div class="item_heading">
+                    <div class="info">
+                      <h3>Monsterbox Productions  &mdash; Owner</h3>
+                      <p>Ruby on Rails web-development firm</p>
+                    </div><!-- info -->
+                    <div class="details">
+                      <div class="location">Toronto, ON</div>
+                      <div class="duration">2009-2018</div>
+                    </div><!-- details -->
+                  </div><!-- item_heading-->
+                  <ul>
+                    <li>Built 50+ web-applications for various tech startups</li>
+                  </ul>
+                </div><!-- item -->
+                <div class="item">
+                  <div class="item_heading">
+                    <div class="info">
+                      <h3>PC Medic  &mdash; IT Technician</h3>
+                      <p>Computer Repair</p>
+                    </div><!-- info -->
+                    <div class="details">
+                      <div class="location">Thunder Bay, ON</div>
+                      <div class="duration">2003-2009</div>
+                    </div><!-- details -->
+                  </div><!-- item_heading-->
+                  <ul>
+                    <li>Hardware repairs, troubleshooting common computer issues</li>
+                    <li>Onsite training and computer repair</li>
                   </ul>
                 </div><!-- item -->
               </div><!-- items -->
@@ -64,14 +101,16 @@
               <h2>Leadership &amp; Activities</h2>
               <div class="items">
                 <div class="item">
-                  <div class="info">
-                    <h3>Cloud Resume Challenge Bootcamp</h3>
-                    <p>I maintain the community project Cloud Resume Challenge</p>
-                  </div><!-- info -->
-                  <div class="details">
-                    <div class="location">Online</div>
-                    <div class="duration">2025 May &emdash; Present</div>
-                  </div><!-- details -->
+                  <div class="item_heading">
+                    <div class="info">
+                      <h3>Cloud Resume Challenge Bootcamp</h3>
+                      <p>I maintain the community project Cloud Resume Challenge</p>
+                    </div><!-- info -->
+                    <div class="details">
+                      <div class="location">Online</div>
+                      <div class="duration">2025 May &mdash; Present</div>
+                    </div><!-- details -->
+                  </div><!-- item_heading-->
                   <ul>
                     <li>Update eBooks</li>
                     <li>Created new video course</li>
@@ -84,29 +123,36 @@
               <h2>Skills &amp; Interests</h2>
               <div class="items">
                 <div class="item">
-                  <div class="info">
-                    <h3>ExamPro Cloud Essentials</h3>
-                    <p>Cloud Fundamentals and multi-cloud knowledge</p>
-                  </div><!-- info -->
-                  <div class="details">
-                    <div class="code">Japan/Toronto</div>
-                    <div class="duration">Valid Till: 2025-2028</div>
-                  </div><!-- details -->
+                  <div class="item_heading">
+                    <div class="info">
+                      <h3>ExamPro Cloud Essentials</h3>
+                      <p>Cloud Fundamentals and multi-cloud knowledge</p>
+                    </div><!-- info -->
+                    <div class="details">
+                      <div class="code">Japan/Toronto</div>
+                      <div class="duration">Valid Till: 2025-2028</div>
+                    </div><!-- details -->
+                  </div><!-- item_heading-->
                 </div><!-- item -->
               </div><!-- items -->
               <div class="items">
                 <div class="item">
-                  <div class="info">
-                    <h3>JLPT Certification</h3>
-                    <p>I'm currently studying Japanese aiming to pass the JLPTN4 in 2025-2026</p>
-                  </div><!-- info -->
-                  <div class="details">
-                    <div class="location">Japan/Toronto</div>
-                    <div class="duration">2025 May &mdash; Present</div>
-                  </div><!-- details -->
+                  <div class="item_heading">
+                    <div class="info">
+                      <h3>JLPT Certification</h3>
+                      <p>I'm currently studying Japanese aiming to pass the JLPT N4 in 2025-2026</p>
+                    </div><!-- info -->
+                    <div class="details">
+                      <div class="location">Japan/Toronto</div>
+                      <div class="duration">2025 May &mdash; Present</div>
+                    </div><!-- details -->
+                  </div><!-- item_heading-->
                 </div><!-- item -->
               </div><!-- items -->
             </section>
+            <div class="disclaimer">
+              This is an example résumé for instructional content and is not intended to be accurate.
+            </div>
           </article>
         </div><!-- div.content -->
       </div><!-- div.content_wrap -->
